--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- feuille de style -->
+    <style></style>
+    <!-- fichiers js -->
+
+
+    <title>NaMaster</title>
+
 </head>
+
+<header>
+<!--  -->
+</header>
+
 <body>
-    
+<!--  -->
 </body>
+
+<footer>
+<!--  -->
+</footer>
+
 </html>
