--- a/src/header.html
+++ b/src/header.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <!-- <link rel="stylesheet" href="./style.css"> -->
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+    <link rel="stylesheet" href="./css/style-tailwind.css">
 </head>
 <header class="bg-gray-800 h-screen grid justify-evenly grid-cols-2 p-4 rounded-b-3xl">
     <!-- BURGER MENU -->
