--- a/src/header.html
+++ b/src/header.html
@@ -7,7 +7,7 @@
     <!-- <script src="https://cdn.tailwindcss.com"></script> -->
     <link rel="stylesheet" href="./css/style-tailwind.css">
 </head>
-<header class="bg-gray-800 h-screen grid justify-evenly grid-cols-2 p-4 rounded-b-3xl">
+<header class="bg-gray-800 h-screen grid justify-evenly grid-cols-2 p-4 rounded-b-3xl max-h-40">
     <!-- BURGER MENU -->
     <div class="relative">
         <!-- Burger Button -->
