bg menu fonctionnel pour importation dans d'autre html

--- a/src/header.html
+++ b/src/header.html
@@ -41,8 +41,8 @@
                 <div class="h-px bg-gray-400 my-2 mx-12"></div>
 
                 <div class="">
-                    <a href="./index.html/#aPropos"
-                        class="flex items-center px-4 text-gray-800 hover:bg-gray-100">Qui sommes-nous
+                    <a href="./index.html/#aPropos" class="flex items-center px-4 text-gray-800 hover:bg-gray-100">Qui
+                        sommes-nous
                         ?</a>
                     <a href="./index.html/#contact" class="flex items-center px-4 text-gray-800 hover:bg-gray-100">
                         Nous contacter
@@ -57,15 +57,7 @@
                 <p>ICI BARRE DE RECHERCHE & FILTRES</p>
             </div>
         </div>
-
     </div>
-
-    <!-- SUITE MENU -->
-    <div>
-
-    </div>
-
-    
 </header>
 
 </html>
