--- a/src/header.html
+++ b/src/header.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/style-tailwind.css">
 
     <!-- BG menu js -->
-    <script src="./js/bgMenu.js"></script>
+    <!-- <script src="./js/bgMenu.js"></script> -->
 </head>
 <header class="bg-gray-800 h-screen grid justify-evenly grid-cols-2 p-4 rounded-b-3xl max-h-20">
     <!-- BURGER MENU -->
