--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <!-- feuille de style -->
     <style></style>
     <!-- fichiers js -->
+    <script src="./js/bgMenu.js"></script>
 
 
     <title>NaMaster</title>
