--- a/src/favoris.html
+++ b/src/favoris.html
@@ -2,49 +2,84 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- feuille de style -->
-  <link rel="stylesheet" href="./css/style-tailwind.css">
-  <!-- <script src="https://cdn.tailwindcss.com/"></script> -->
-  <!-- fichiers js -->
-  <script src="./js/bgMenu.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vos Favoris</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="./js/bgMenu.js"></script>
 
-  <title>NaMaster</title>
-
+    <title>Favoris NaMaster</title>
 </head>
 
+<body class="bg-gray-100 text-gray-800">
 
-<header>
-  <div id="header-container"></div>
-</header>
+    <header>
+        <div id="header-container"></div>
+    </header>
 
-<body>
-  
+    <main class="p-4">
+        <div class="grid grid-cols-1 gap-4">
 
-  <script>
-    // Charger et insérer le contenu de header.html
-    fetch('header.html')
-      .then(response => response.text())
-      .then(data => {
-        document.getElementById('header-container').innerHTML = data;
+            <h1 class="font-bold text-5xl text-center lg:text-7xl">Vos favoris</h1>
+            <div class="bg-white p-4 rounded-md shadow-md flex items-center justify-between">
+                <div>
+                    <h2 class="font-bold text-lg">MASTER Xxxxxxxx</h2>
+                    <p class="text-sm text-gray-600">Description master. Lorem ipsum dolor sit amet consectetur.</p>
+                </div>
+                <button class="text-red-600 text-xl">&times;</button>
+            </div>
 
-        // Réexécuter le script bgMenu.js après l'injection
-        const burgerBtn = document.getElementById('burger-btn');
-        const menu = document.getElementById('menu');
+            <div class="bg-white p-4 rounded-md shadow-md flex items-center justify-between">
+                <div>
+                    <h2 class="font-bold text-lg">MASTER Xxxxxxxx</h2>
+                    <p class="text-sm text-gray-600">Description master. Lorem ipsum dolor sit amet consectetur.</p>
+                </div>
+                <button class="text-red-600 text-xl">&times;</button>
+            </div>
 
-        if (burgerBtn) {
-          burgerBtn.addEventListener('click', () => {
-            menu.classList.toggle('hidden');
-          });
-        }
-      })
-      .catch(error => console.error('Error loading header:', error));
-  </script>
+            <div class="bg-white p-4 rounded-md shadow-md flex items-center justify-between">
+                <div>
+                    <h2 class="font-bold text-lg">MASTER Xxxxxxxx</h2>
+                    <p class="text-sm text-gray-600">Description master. Lorem ipsum dolor sit amet consectetur.</p>
+                </div>
+                <button class="text-red-600 text-xl">&times;</button>
+            </div>
+
+            <div class="bg-white p-4 rounded-md shadow-md flex items-center justify-between">
+                <div>
+                    <h2 class="font-bold text-lg">MASTER Xxxxxxxx</h2>
+                    <p class="text-sm text-gray-600">Description master. Lorem ipsum dolor sit amet consectetur.</p>
+                </div>
+                <button class="text-red-600 text-xl">&times;</button>
+            </div>
+
+            <div class="bg-white p-4 rounded-md shadow-md flex items-center justify-between">
+                <div>
+                    <h2 class="font-bold text-lg">MASTER Xxxxxxxx</h2>
+                    <p class="text-sm text-gray-600">Description master. Lorem ipsum dolor sit amet consectetur.</p>
+                </div>
+                <button class="text-red-600 text-xl">&times;</button>
+            </div>
+        </div>
+    </main>
+
+    <script>
+        fetch('header.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('header-container').innerHTML = data;
+
+                const burgerBtn = document.getElementById('burger-btn');
+                const menu = document.getElementById('menu');
+
+                if (burgerBtn) {
+                    burgerBtn.addEventListener('click', () => {
+                        menu.classList.toggle('hidden');
+                    });
+                }
+            })
+            .catch(error => console.error('Error loading header:', error));
+    </script>
 </body>
-
-<footer>
-  <!--  -->
-</footer>
 
 </html>
