--- a/src/resultat.html
+++ b/src/resultat.html
@@ -10,7 +10,7 @@
   <!-- fichiers js -->
   <script src="./js/bgMenu.js"></script>
 
-  <title>NaMaster</title>
+  <title>Résultats NaMaster</title>
 
 </head>
 
