--- a/src/favoris.html
+++ b/src/favoris.html
@@ -79,7 +79,18 @@
                 }
             })
             .catch(error => console.error('Error loading header:', error));
+
+        fetch('footer.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('footer-container').innerHTML = data;
+            })
+            .catch(error => console.error('Error loading header:', error));
+
     </script>
 </body>
+<footer>
+    <div id="footer-container"></div>
+</footer>
 
 </html>
