--- a/src/header.html
+++ b/src/header.html
@@ -10,7 +10,7 @@
 <body>
     <header class="bg-gray-800 flex justify-between items-center p-4 rounded-b-3xl h-20"> <!-- si le justify-between ne fonctionne pas, ajouter : style="display: flex; justify-content: space-between;"-->
         <!-- BURGER MENU -->
-        <div class="flex relative">
+        <div class="relative">
             <!-- Burger Button -->
             <button id="burger-btn"
                 class="md:hidden flex flex-col items-center justify-center space-y-1 w-10 h-10 bg-gray-200 rounded-lg focus:outline-none hover:bg-gray-300">
