Correction bg menu en dehors de l'ecran

--- a/src/header.html
+++ b/src/header.html
@@ -21,7 +21,7 @@
 
             <!-- Dropdown Menu -->
             <div id="menu"
-                class="hidden absolute top-12 right-0 font-bold bg-white shadow-lg rounded-lg w-48 py-2 md:hidden">
+                class="hidden absolute top-12 left-0 font-bold bg-white shadow-lg rounded-lg w-48 py-2 md:hidden">
                 <div class="liens">
                     <a href="./index.html" class="flex items-center px-4 text-gray-800 hover:bg-gray-100">
                         <img src="https://cdn-icons-png.flaticon.com/512/1828/1828490.png" alt="Home"
