--- a/src/resultat.html
+++ b/src/resultat.html
@@ -20,7 +20,7 @@
 </header>
 
 <body>
-  <div class="grid grid-cols-1 gap-4 lg:mx-10">
+  <div class="grid grid-cols-1 gap-4 lg:mx-10 mb-8">
     <h1 class="font-bold text-5xl text-center lg:text-7xl">Les diffèrents Masters</h1>
 
     <a href="#">
@@ -84,5 +84,6 @@
     <div id="footer-container"></div>
 </footer>
 </body>
+
 
 </html>
