--- a/src/footer.html
+++ b/src/footer.html
@@ -1,31 +1,42 @@
-
-    <footer class="grid  bg-gray-400 xl:px-20 p-10 py-6 gap-y-8 xl:text-4xl rounded-t-3xl"> <!--marge top a delete une fois-->
-        <!-- <script src="https://cdn.tailwindcss.com"></script> -->
-        <link rel="stylesheet" href="./css/style-tailwind.css" type="text/css" /> <!--NE FONCTIONNE PAS-->
-        <div class="grid grid-cols-2 sm:justify-items-center justify-items-start gap-y-5 ">
+<footer class="grid  bg-gray-400 xl:px-20 p-10 py-6 gap-y-8 xl:text-4xl rounded-t-3xl">
+    <!--marge top a delete une fois-->
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+    <link rel="stylesheet" href="./css/style-tailwind.css" type="text/css" /> <!--NE FONCTIONNE PAS-->
+    <div class="grid md:grid-cols-2">
+        <div class="grid grid-cols-2 col-span-1 sm:justify-items-center justify-items-start gap-y-5 ">
             <a href="contact.html">Contact</a>
             <a href="mentionsLegales.html">Mentions légales</a>
             <a href="APropos.html">A propos de nous</a>
             <a href="Faq.html">Faq</a>
         </div>
-        <div class="grid grid-cols-4 justify-items-center gap-x-2 ">
-            <div class="flex bg-gray-600 rounded-full m-5 xl:h-32 xl:w-32 sm:h-14 sm:w-14 h-10 w-10 justify-center items-center">
-                <p class="text-white font-bold">RSN</p>
+        <div class="grid grid-cols-2 md:grid-cols-1 col-span-1 justify-items-center gap-x-2 ">
+            <div class="grid grid-cols-2 col-span-1 justify-items-center gap-x-2">
+                <div
+                    class="flex bg-gray-600 rounded-full m-5 xl:h-32 xl:w-32 sm:h-14 sm:w-14 h-10 w-10 justify-center items-center">
+                    <p class="text-white font-bold">RSN</p>
+                </div>
+
+                <div
+                    class="flex bg-gray-600 rounded-full m-5 xl:h-32 xl:w-32 sm:h-14 sm:w-14 h-10 w-10 justify-center items-center">
+                    <p class="text-white font-bold">RSN</p>
+                </div>
             </div>
 
-            <div class="flex bg-gray-600 rounded-full m-5 xl:h-32 xl:w-32 sm:h-14 sm:w-14 h-10 w-10 justify-center items-center">
-                <p class="text-white font-bold">RSN</p>
+            <div class="grid grid-cols-2 col-span-1 justify-items-center gap-x-2">
+                <div
+                    class="flex bg-gray-600 rounded-full m-5 xl:h-32 xl:w-32 sm:h-14 sm:w-14 h-10 w-10 justify-center items-center">
+                    <p class="text-white font-bold">RSN</p>
+                </div>
+
+                <div
+                    class="flex bg-gray-600 rounded-full m-5 xl:h-32 xl:w-32 sm:h-14 sm:w-14 h-10 w-10 justify-center items-center">
+                    <p class="text-white font-bold">RSN</p>
+                </div>
             </div>
 
-            <div class="flex bg-gray-600 rounded-full m-5 xl:h-32 xl:w-32 sm:h-14 sm:w-14 h-10 w-10 justify-center items-center">
-                <p class="text-white font-bold">RSN</p>
-            </div>
-
-            <div class="flex bg-gray-600 rounded-full m-5 xl:h-32 xl:w-32 sm:h-14 sm:w-14 h-10 w-10 justify-center items-center">
-                <p class="text-white font-bold">RSN</p>
-            </div>
         </div>
-        <div>
-            <p class="">© Tous droits réservés</p>
-        </div>
-    </footer>
+    </div>
+    <div>
+        <p class="">© Tous droits réservés</p>
+    </div>
+</footer>
