--- a/src/resultat.html
+++ b/src/resultat.html
@@ -9,6 +9,7 @@
   <!-- <script src="https://cdn.tailwindcss.com/"></script> -->
   <!-- fichiers js -->
   <script src="./js/bgMenu.js"></script>
+  <script src="./js/navBarre.js"></script>
 
   <title>Résultats NaMaster</title>
 
