Link du nouveau navBarre dans l'ensemble des pages

--- a/src/favoris.html
+++ b/src/favoris.html
@@ -8,6 +8,10 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="./js/bgMenu.js"></script>
 
+    <!-- fichiers js -->
+  <script src="./js/bgMenu.js"></script>
+  <script src="./js/navBarre.js"></script>
+
     <title>Favoris NaMaster</title>
 </head>
 
