--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NaMaster - Accueil</title>
     <script src="https://cdn.tailwindcss.com"></script>
+
+    <!-- fichiers js -->
+  <script src="./js/bgMenu.js"></script>
+  <script src="./js/navBarre.js"></script>
+  
 </head>
 <header>
     <div id="header-container"></div>
