--- a/src/etablissements.html
+++ b/src/etablissements.html
@@ -7,6 +7,10 @@
     <title>Vos Favoris</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="./js/bgMenu.js"></script>
+
+    <!-- fichiers js -->
+  <script src="./js/bgMenu.js"></script>
+  <script src="./js/navBarre.js"></script>
 </head>
 
 <body class="bg-gray-100 text-gray-800">
