--- a/src/rechercheETfiltres.html
+++ b/src/rechercheETfiltres.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://cdn.tailwindcss.com"></script>
+
+    <!-- fichiers js -->
+  <script src="./js/bgMenu.js"></script>
+  <script src="./js/navBarre.js"></script>
 </head>
 <body>
     <div class="mt-6 px-4">
