.inex.html#contact

--- a/src/header.html
+++ b/src/header.html
@@ -10,7 +10,7 @@
 <body>
     <header class="bg-gray-800 flex justify-between items-center p-4 rounded-b-3xl h-20">
         <!-- si le justify-between ne fonctionne pas, ajouter : style="display: flex; justify-content: space-between;"-->
-        
+
         <!-- ||||||||||| -->
         <!-- BURGER MENU -->
         <div class="relative">
@@ -24,7 +24,7 @@
 
             <!-- Dropdown Menu -->
             <div id="menu"
-                class="hidden absolute z-10 top-10 left-[-16px] font-bold bg-gray-800 shadow-lg rounded-b-3xl w-[100vw] p-4 pt-10 md:hidden">
+                class="transition duration-150 hidden absolute z-10 top-10 left-[-16px] font-bold bg-gray-800 shadow-lg rounded-b-3xl w-[100vw] p-4 pt-10 md:hidden">
                 <div class="liens">
                     <a href="./index.html" class="flex items-center px-4 text-white hover:bg-gray-100">
                         <img src="https://cdn-icons-png.flaticon.com/512/1828/1828490.png" alt="Home"
@@ -46,10 +46,10 @@
                     <div class="h-px bg-gray-400 my-2 mx-12"></div>
 
                     <div class="">
-                        <a href="./index.html/#aPropos" class="flex items-center px-4 text-white hover:bg-gray-100">Qui
+                        <a href="./index.html#aPropos" class="flex items-center px-4 text-white hover:bg-gray-100">Qui
                             sommes-nous
                             ?</a>
-                        <a href="./index.html/#contact" class="flex items-center px-4 text-white hover:bg-gray-100">
+                        <a href="./index.html#contact" class="flex items-center px-4 text-white hover:bg-gray-100">
                             Nous contacter
                         </a>
                     </div>
@@ -82,44 +82,40 @@
         <!-- ||||||||||| -->
         <!-- NORMAL MENU -->
         <div class="sm:hidden md:flex">
+            <!-- LOGO -->
+
+            <!-- RECHERCHE -->
+            <div id="search-container"></div>
+
+            <!-- NAVBARRE -->
             <nav class="flex justify-around rounded-full bg-white shadow-md p-2">
-              <a
-                href="./index.html"
-                class="text-black px-4 py-2 rounded-full font-medium transition-all duration-200 active:bg-gray-200"
-                id="home-tab"
-              >
-                ACCUEIL
-              </a>
-              <a
-                href="./etablissements.html"
-                class="text-gray-500 px-4 py-2 rounded-full font-medium transition-all duration-200 hover:text-black"
-                id="establishments-tab"
-              >
-                ÉTABLISSEMENTS
-              </a>
-              <a
-                href="./masters.html"
-                class="text-gray-500 px-4 py-2 rounded-full font-medium transition-all duration-200 hover:text-black"
-                id="masters-tab"
-              >
-                MASTERS
-              </a>
-              <a
-                href="./favoris.html"
-                class="text-gray-500 px-4 py-2 rounded-full font-medium transition-all duration-200 hover:text-black"
-                id="favorites-tab"
-              >
-                FAVORIS
-              </a>
-              <a
-                href="./profil.html"
-                class="text-gray-500 px-4 py-2 rounded-full font-medium transition-all duration-200 hover:text-black"
-                id="profile-tab"
-              >
-                PROFIL
-              </a>
+                <a href="./index.html"
+                    class="text-black px-4 py-2 rounded-full font-medium transition-all duration-200 active:bg-gray-200"
+                    id="home-tab">
+                    ACCUEIL
+                </a>
+                <a href="./etablissements.html"
+                    class="text-gray-500 px-4 py-2 rounded-full font-medium transition-all duration-200 hover:text-black"
+                    id="establishments-tab">
+                    ÉTABLISSEMENTS
+                </a>
+                <a href="./masters.html"
+                    class="text-gray-500 px-4 py-2 rounded-full font-medium transition-all duration-200 hover:text-black"
+                    id="masters-tab">
+                    MASTERS
+                </a>
+                <a href="./favoris.html"
+                    class="text-gray-500 px-4 py-2 rounded-full font-medium transition-all duration-200 hover:text-black"
+                    id="favorites-tab">
+                    FAVORIS
+                </a>
+                <a href="./profil.html"
+                    class="text-gray-500 px-4 py-2 rounded-full font-medium transition-all duration-200 hover:text-black"
+                    id="profile-tab">
+                    PROFIL
+                </a>
             </nav>
-          </div>
+        </div>
     </header>
 
     <script>
