Update footer links and add contact section to index.html

--- a/src/index.html
+++ b/src/index.html
@@ -69,6 +69,33 @@
                 rutrum. Curabitur iaculis velit sit amet convallis mollis. Ut tincidunt nisl eget venenatis scelerisque.
             </p>
         </div>
+
+        <!-- Section Contact -->
+<div id="contact" class="mt-10">
+    <h3 class="text-center text-xl font-bold">Contact</h3>
+    <hr class="my-4 border-t border-gray-300">
+
+    <div class="grid grid-cols-1 sm:grid-cols-2 gap-6">
+        <!-- Email -->
+        <div class="bg-white rounded-lg shadow-md p-4 text-center">
+            <h4 class="text-lg font-semibold">Email</h4>
+            <p class="text-sm text-gray-600">namaster@contact.fr</p>
+        </div>
+
+        <!-- Téléphone Fixe -->
+        <div class="bg-white rounded-lg shadow-md p-4 text-center">
+            <h4 class="text-lg font-semibold">Téléphone Fixe</h4>
+            <p class="text-sm text-gray-600">+33 1 23 45 67 89</p>
+        </div>
+
+        <!-- Téléphone Portable -->
+        <div class="bg-white rounded-lg shadow-md p-4 text-center">
+            <h4 class="text-lg font-semibold">Téléphone Portable</h4>
+            <p class="text-sm text-gray-600">+33 6 78 90 12 34</p>
+        </div>
+    </div>
+</div>
+
     </main>
 
     <script>
