--- a/src/resultat.html
+++ b/src/resultat.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- feuille de style -->
   <link rel="stylesheet" href="./css/style-tailwind.css">
-  <!-- <script src="https://cdn.tailwindcss.com/"></script> -->
+  <script src="https://cdn.tailwindcss.com/"></script>
   <!-- fichiers js -->
   <script src="./js/bgMenu.js"></script>
   <script src="./js/navBarre.js"></script>
