--- a/src/profil.html
+++ b/src/profil.html
@@ -20,8 +20,10 @@
             <!-- Avatar et Nom -->
             <div>
                 <div class="w-32 h-32 bg-gray-300 rounded-full mx-auto flex items-center justify-center">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-16 w-16 text-gray-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 12c2.5 0 4.5-2 4.5-4.5S14.5 3 12 3 7.5 5 7.5 7.5 9.5 12 12 12zM12 14.25c-4.5 0-6.75 2.25-6.75 2.25s.75 4.5 6.75 4.5 6.75-4.5 6.75-4.5-2.25-2.25-6.75-2.25z" />
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-16 w-16 text-gray-500" fill="none"
+                        viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M12 12c2.5 0 4.5-2 4.5-4.5S14.5 3 12 3 7.5 5 7.5 7.5 9.5 12 12 12zM12 14.25c-4.5 0-6.75 2.25-6.75 2.25s.75 4.5 6.75 4.5 6.75-4.5 6.75-4.5-2.25-2.25-6.75-2.25z" />
                     </svg>
                 </div>
                 <h2 class="text-xl font-bold">*User*</h2>
@@ -35,10 +37,13 @@
                 </div>
                 <!-- Mot de passe -->
                 <div class="flex items-center bg-gray-200 p-4 rounded-full justify-between">
-                    <input type="password" id="password" class="bg-gray-200 focus:outline-none w-full" placeholder="*mdp*" />
+                    <input type="password" id="password" class="bg-gray-200 focus:outline-none w-full"
+                        placeholder="*mdp*" />
                     <button onclick="togglePasswordVisibility()" id="toggle-password">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-gray-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12H9m6 0a6 6 0 11-12 0 6 6 0 0112 0z" />
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-gray-500" fill="none"
+                            viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M15 12H9m6 0a6 6 0 11-12 0 6 6 0 0112 0z" />
                         </svg>
                     </button>
                 </div>
@@ -46,9 +51,12 @@
 
             <!-- Actions -->
             <div class="grid grid-cols-1 gap-4 max-w-md mx-auto">
-                <button class="bg-gray-200 py-3 px-6 rounded-full text-center text-sm font-semibold">Supprimer vos données</button>
-                <button class="bg-gray-200 py-3 px-6 rounded-full text-center text-sm font-semibold">Changer de mot de passe</button>
-                <button class="bg-gray-800 text-white py-3 px-6 rounded-full text-center text-sm font-semibold">Se déconnecter</button>
+                <button class="bg-gray-200 py-3 px-6 rounded-full text-center text-sm font-semibold">Supprimer vos
+                    données</button>
+                <button class="bg-gray-200 py-3 px-6 rounded-full text-center text-sm font-semibold">Changer de mot de
+                    passe</button>
+                <button class="bg-gray-800 text-white py-3 px-6 rounded-full text-center text-sm font-semibold">Se
+                    déconnecter</button>
             </div>
         </div>
     </main>
@@ -83,6 +91,18 @@
                 document.getElementById('search-container').innerHTML = data;
             })
             .catch(error => console.error('Error loading header:', error));
+
+        function togglePasswordVisibility() {
+            const passwordInput = document.getElementById('password');
+            const passwordToggle = document.getElementById('toggle-password').firstElementChild;
+            if (passwordInput.type === 'password') {
+                passwordInput.type = 'text';
+                passwordToggle.setAttribute('stroke', '#000'); // Icône devient plus visible
+            } else {
+                passwordInput.type = 'password';
+                passwordToggle.setAttribute('stroke', '#6b7280'); // Récupère la couleur grise
+            }
+        }
     </script>
 </body>
 
