--- a/src/header.html
+++ b/src/header.html
@@ -83,9 +83,21 @@
         <!-- NORMAL MENU -->
         <div class="sm:hidden md:flex">
             <!-- LOGO -->
+            <img  class="" src="" alt="">
 
             <!-- RECHERCHE -->
-            <div id="search-container"></div>
+            <!-- Barre de recherche -->
+            <div class="flex justify-center items-center mr-2">
+                <div class="relative w-full max-w-lg">
+                    <input type="text" placeholder="Rechercher"
+                        class="w-full px-4 py-3 border border-gray-300 rounded-full bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-400" />
+                    <!-- Icône de recherche -->
+                    <button class="absolute top-1/2 transform -translate-y-1/2 right-4">
+                        <img src="https://cdn-icons-png.flaticon.com/512/622/622669.png" alt="Search Icon"
+                            class="w-5 h-5">
+                    </button>
+                </div>
+            </div>
 
             <!-- NAVBARRE -->
             <nav class="flex justify-around rounded-full bg-white shadow-md p-2">
