correction conflits menus

--- a/src/header.html
+++ b/src/header.html
@@ -80,7 +80,7 @@
 
         <!-- ||||||||||| -->
         <!-- NORMAL MENU -->
-        <div class="sm:hidden md:flex">
+        <div class="hidden md:flex">
             <!-- LOGO -->
             <img class="" src="" alt="">
 
