--- a/src/header.html
+++ b/src/header.html
@@ -130,12 +130,14 @@
     </header>
 
     <script>
-        fetch('rechercheETfiltres.html')
-            .then(response => response.text())
-            .then(data => {
-                document.getElementById('search-container').innerHTML = data;
-            })
-            .catch(error => console.error('Error loading header:', error));
+        document.querySelectorAll('.search-container').forEach(container => {
+            fetch('rechercheETfiltres.html')
+                .then(response => response.text())
+                .then(data => {
+                    container.innerHTML = data;
+                })
+                .catch(error => console.error('Error loading content:', error));
+        });
     </script>
 
 </body>
