--- a/src/index.html
+++ b/src/index.html
@@ -122,12 +122,14 @@
             })
             .catch(error => console.error('Error loading header:', error));
 
-        fetch('rechercheETfiltres.html')
-            .then(response => response.text())
-            .then(data => {
-                document.getElementById('search-container').innerHTML = data;
-            })
-            .catch(error => console.error('Error loading header:', error));
+        document.querySelectorAll('.search-container').forEach(container => {
+            fetch('rechercheETfiltres.html')
+                .then(response => response.text())
+                .then(data => {
+                    container.innerHTML = data;
+                })
+                .catch(error => console.error('Error loading content:', error));
+        });
 
     </script>
 </body>
